resolved fdo#73113 not string cell does not mean no string at cell

Introduced with c008dc483f8c6840803983e7e351cec6fdd32070 the
ScQueryCellIterator::BinarySearch() evaluated all non-string cells as
not being string, ignoring edit cells and formula cell string results.

Change-Id: I43be46dc8db35d6d0677086c345379ed4627b355
(cherry picked from commit 6046207ea2ef67de1388b30a7e8e0da5dcf5e6bf)